--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!--  網界編碼-->
   <meta charset="UTF-8">
    <!--  網頁標題-->
-  <title>名片-楊梅高中</title>
+  <title>名片-新化高中</title>
   <!--  連結CSS檔案-->
   <link rel="stylesheet" href="css\style.css">
 </head>
@@ -13,20 +13,20 @@
 <body>
     <!-- 名片區塊-->
   <div class="namecard">
-  <img src="img\123.jpg" />
+  <img src="img\2.png" />
     <!--  名片右邊文字區塊-->
   <div class="right">
-    <h2>洪志菁
+    <h2>蘇育萾
     <!--  空格--> 
-    <SPAN>(Hung, Chih Ching )</SPAN>
+    <SPAN>(Su, Yu Ying )</SPAN>
     </h2>
-    <H5>台灣大學機械工程研究所博士班畢業</H5>
+    <H5>新化高中畢業</H5>
       <!--  分隔線-->
     <HR></HR>
     <P>戀愛已是生活中不可或缺的一部分，是生活，是必須，是無法輕易忘卻的味道。
     <br>
-    <br>d96522004@ntu.edu.tw
-    <br>台北市大安區羅斯福路4段1號
+    <br>isa0116apple@gmail.com
+    <br>台南市新化區
     </P>
   <!--  大圓區塊-->
     <div class="circle circle1"></div>
@@ -35,7 +35,8 @@
   </div>
 </div>
 
-<h3 class="page_title">楊梅高中計算機概論</h3>
+<h3 class="page_title">新化高中資訊科技
+</h3>
 
 </body>
 </html>
